# Full-Lifecycle_Health_Companion

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  db_schema.txt  debug_model_chat.py  debug_model_output.py  download_models.py  frontend.py  inspect_db.py  inspect_db_v2.py  model_registry.py  pyproject.toml  requirements.txt  schema_utf8.txt  server.py  test_pharmacy.py  verify_demo.py
scripts/: count_loc.py  debug_audio.py  extract_note.py  ingest_fitbit.py  inspect_processor.py  verify_consult_audio.py  verify_intake_chat.py  verify_manual_fbank.py  verify_manual_inference.py  verify_manual_save.py  verify_minimal_args.py  verify_triage_ai.py
static/: app.js  index.html
static/strategies/: base_strategy.js  consult.js  home_triage.js  index.js  intake.js  pharmacy.js
strategies/: __init__.py  base.py  consult.py  home_triage.py  intake.py  monitoring.py  pharmacy.py
tests/: debug_nuclear.py  reproduce_issue.py  validate_consult_summary.py  verify_fix.py
utils/: logger.py
